12/8/08 - #1003, use closeButton.png from phetcommon
10/8/08 - use PhetApplicationConfig.launchSim
10/8/08 - moved list of rejected features to Unfuddle 802
6/24/08 - move SphericalNode to piccolo-phet
5/20/08 - replace Font with PhetFont
# 1.07.00 (21248)
# 1.06.01 (21223)
5/7/08 - pickup PhetDefaultFont support for Japanese preferred fonts [543]
4/4/08 - remove clock icon from HAClockControlPanel, animated icon was added to phetcommon
1/7/08 - replace "Lucida Sans" with PhetDefaultFont in test code
# 1.06.00 (18580)
11/16/07 - Experiment atom was getting stuck in (2,0,0), needed to attached a MetastableHander to it (similar to Schrodinger)
11/9/07 - move about.credits property to localization file
8/29/07 - replace HAWiggleMe with piccolo-phet DefaultWiggleMe
8/29/07 - replace JLabel().getFont() with PhetDefaultFont
8/27/07 - migrated photon image creation and caching to piccolo-phet (PhotonImageFactory)
# 1.05.00 (17033)
7/27/07 - new version published as part of new website deployment
7/24/07 - PhotonImageGenerator utility added by Sam Reid
7/10/07 - use -dev commandline arg to enable developer controls instead of javaws.phet.developer property
6/15/07 - convert description properties to well-formed HTML
# 1.04.00 (15867)
6/13/07 - use property javaws.phet.developer to enable developer controls
6/13/07 - remove ARTS implementation (GPL) of associated Legendre polynomials, remove from credits
6/13/07 - integrate Sam Reid's solver for associated Legendre polynomials
5/14/07 - remove duplicate code by making HAClockControlPanel extend ClockControlPanel
5/14/07 - get clock.png from phetcommon
4/23/07 - delete SliderControl, not used
4/6/07 - organize imports
4/6/07 - set locale in Spanish JNLP file via javaws.phet.locale property
4/6/07 - encapsulate loading of strings and images in HAResources
4/6/07 - convert from SimStrings to PhetProjectConfig
# 1.03.00 (14208)