@@ -1,3 +1,4 @@
+12/11/08 - #1020, use new gun image created by Noah P.
 12/8/08 - #1003, use closeButton.png from phetcommon
 10/8/08 - use PhetApplicationConfig.launchSim
 10/8/08 - moved list of rejected features to Unfuddle 802
